[package]
edition = '2018'
name = "slog-logfmt"
version = "0.0.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/slog-logfmt"
readme = "README.md"
description = "logfmt drain & format for slog"
documentation = "https://docs.rs/slog-logfmt"

[badges]
travis-ci = { repository = "antifuchs/slog-logfmt", branch = "master" }
maintenance = { status = "passively-maintained" }

[package.metadata.template_ci.clippy]
allow_failure = false
version = "stable"

[dependencies]
