[package]
edition = '2018'
name = "slog-logfmt"
version = "0.1.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/antifuchs/slog-logfmt"
readme = "README.md"
description = "logfmt drain & format for slog"
documentation = "https://docs.rs/slog-logfmt"
categories = ["development-tools::debugging", "value-formatting", "command-line-interface"]
keywords = ["slog", "logfmt", "log", "logging", "structured"]

[badges]
travis-ci = { repository = "antifuchs/slog-logfmt", branch = "master" }
maintenance = { status = "passively-maintained" }

[package.metadata.template_ci.clippy]
allow_failure = false
version = "stable"

[dependencies]
slog = "2.5.0"

[dev-dependencies]
slog-async = "2.4.0"
test-case = "2.0.2"
